Created the database and I will ad dummy classes now! #2

--- a/RecipeManager/RecipeManager.csproj
+++ b/RecipeManager/RecipeManager.csproj
@@ -93,7 +93,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\MainWindows.cs" />
+    <Compile Include="Controllers\MainWindowController.cs" />
     <Compile Include="Models\MainWindowModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
