Updated Demo, Docs and added an icon

--- a/RecipeManager/RecipeManager.csproj
+++ b/RecipeManager/RecipeManager.csproj
@@ -170,6 +170,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>RecipeManagerDatabase.mdf</DependentUpon>
     </Content>
+    <Resource Include="Views\Icons\window-icon.png" />
     <Resource Include="Views\Icons\add.png" />
   </ItemGroup>
   <ItemGroup />
